--- a/PuzzleCube/Assembly-CSharp.csproj
+++ b/PuzzleCube/Assembly-CSharp.csproj
@@ -58,6 +58,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\Scripts\Arrival.cs" />
      <Compile Include="Assets\Scripts\BallTrigger.cs" />
      <Compile Include="Assets\Scripts\Chrono.cs" />
      <Compile Include="Assets\Scripts\Floor.cs" />
